--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "next": "14.1.0",
+    "npm": "^10.5.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0"
